--- a/.gitignore
+++ b/.gitignore
@@ -129,7 +129,7 @@ dmypy.json
 .pyre/
 
 # Project specific
-examples/
+# Allow example images for README
 output/
 temp/
 *.png
@@ -138,4 +138,6 @@ temp/
 *.bmp
 *.tiff
 *.tif
+!examples/**/*.png
+!examples/**/*.jpg
 !examples/README.md
